# gitops

./: .envrc  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  LICENCE  Makefile  Pipfile  README.md  docker-compose.yml  gitops-0.1.0.tgz  gitops-0.10.0.tgz  gitops-0.10.1.tgz  gitops-0.10.2.tgz  gitops-0.10.3.tgz  gitops-0.10.4.tgz  gitops-0.10.5.tgz  gitops-0.10.6.tgz  gitops-0.10.7.tgz  gitops-0.11.0.tgz  gitops-0.11.1.tgz  gitops-0.11.3.tgz  gitops-0.11.4.tgz  gitops-0.11.5.tgz  gitops-0.11.6.tgz  gitops-0.2.0.tgz  gitops-0.4.0.tgz  gitops-0.8.3.tgz  gitops-0.8.4.tgz  gitops-0.8.7.tgz  gitops-0.8.8.tgz  gitops-0.8.9.tgz  gitops-0.9.0.tgz  gitops-0.9.1.tgz  gitops-0.9.10.tgz  gitops-0.9.14.tgz  gitops-0.9.16.tgz  gitops-0.9.17.tgz  gitops-0.9.18.tgz  (+18 more)
.git-crypt/keys/default/0/: 0FCEB5B5A895DEFDA94EE67A9FF29CA8FB6C5430.gpg  2D7BF91F3DA6A0ADE70B399DB7739C66C15AF40F.gpg  82DF2CA134F539834AC3EE257A5884E8BF0349BB.gpg
.github/workflows/: lint.yml  publish.yml  test.yml
chart/: Chart.yaml  README.md
chart/templates/: _helpers.tpl  certificate.yml  deployment.yml  ingress.yml  issuer.yml  secrets.yml
charts/gitops/: Chart.yaml  README.md  values.yaml
charts/gitops/chart/templates/: certificate.yml
charts/gitops/templates/: _helpers.tpl  certificate.yml  deployment.yml  environment.yml  ingress.yml  issuer.yml  secrets.yml  service.yml  serviceaccount.yaml
common/: app.py  utils.py
deploy/: gitops-deployment.yml  gitops-service.yml
gitops/: README.md  __init__.py  __main__.py  application.py  cluster.py  command_line.py  core.py  db.py  deploy.py  git.py  github_webhook.py  main.py  monkeypatches.py  namespace.py  newtenant.py  script.py  settings.py  shorthands.py  slack.py  utils.py  worker.py
gitops/common/: app.py  utils.py
gitops/utils/: __init__.py  apps.py  async_runner.py  cli.py  config.py  exceptions.py  images.py  kube.py  tags.py  yaml.py
gitops_server/: README.md  __init__.py  __main__.py  app.py  app_definitions.py  command_line.py  deploy.py  deployment_checker.py  git.py  github.py  github_webhook.py  logging_config.py  main.py  namespace.py  sanic_utils.py  settings.py  slack.py  types.py  utils.py  worker.py
gitops_server/utils/: __init__.py  git.py  github.py  slack.py
gitops_server/workers/: __init__.py
gitops_server/workers/deployer/: __init__.py  deploy.py  hooks.py  worker.py
gitops_server/workers/status_updater/: __init__.py  worker.py
tests/: conftest.py  make_values.py  sample_data.py  test_app.py  test_core.py  test_deploy.py  test_endpoint.py  test_git.py  test_gitops_server.py  test_namespace.py  test_utils.py  test_webhooks.py  utils.py  webhook_sample_data.py
