[tool.poetry]
name = "gitops"
version = "0.9.17"
description = "Manage multiple apps across one or more k8s clusters."
authors = ["Jarek Głowacki <jarekwg@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
# CLI requirements
invoke = "*"
pyyaml = ">=5.1.2"
dsnparse = "*"
colorama = "^0.4.4"
boto3 = "*"
humanize = "^3.5.0"
tabulate = "^0.8.9"
# Server requirements
fastapi = { version = "*", optional = true }
httpx = { version = ">=0.18.1,<0.24.0", optional = true }
uvicorn = { version = "^0.17.0", optional = true }
sentry-sdk = { version = "^1.3.0", optional = true }
kubernetes_asyncio = { version = "^12.1.2", optional = true }

[tool.poetry.extras]
server = [
    "fastapi",
    "uvicorn",
    "httpx",
    "uvicorn",
    "sentry-sdk",
    "kubernetes_asyncio",
]

[tool.poetry.dev-dependencies]
#Flake 9 is flake 8 with pyproject support =_=.
isort = "*"
ipdb = "*"
python-dotenv = "*"
pytest = "*"
requests = "^2.25.1"
pre-commit = "^2.13.0"
mypy = "^0.941"
black = "*"
pytest-asyncio = "^0.20.3"

[tool.poetry.scripts]
gitops = 'gitops.main:program.run'

# Use this to seperate our CLI and Server requirements. poetry install -E server
#[tool.poetry.extras]
#server = ["fastapi", "uvicorn", "httpx"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##### Tooling configuraiton
[tool.black]
line-length = 100
target-version = ['py38']
experimental_string_processing = true

[tool.isort]
profile = 'black'
multi_line_output = 3
