[metadata]
name = gitops
version = attr: gitops.__version__
author = Luke Hodkinson, Dean Mckendry, Jarek Głowacki
author_email = jarekwg@gmail.com
license = BSD
description = Manage multiple apps across one one or more k8s clusters.
keywords = gitops, k8s
url = https://github.com/uptick/gitops
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe=False
packages = gitops
install_requires =
    tabulate
    boto3
    boto
    invoke
    humanize
    colorama
    pyyaml==5.1.2

[options.entry_points]
console_scripts =
    gitops = gitops.main:program.run

[flake8]
ignore = E501, W503
max-line-length = 100

[isort]
known_common = common
sections = FUTURE,STDLIB,THIRDPARTY,COMMON,FIRSTPARTY,LOCALFOLDER
extra_standard_library = invoke,yaml,colorama
multi_line_output = 3
include_trailing_comma = True
line_length = 100
